# llm-expt

./: .gitignore  README.md  pyproject.toml  requirements.txt
CrewAI/: requirements.txt
CrewAI/src/: agents.py  main.py  tasks.py
bedrock/: bedrock_examples.ipynb
code_generation/: app.py  code.py  evaluation.py  graph_state.py  langgraph_assistant.ipynb  requirements.txt  utils.py
coursera_llm/: requirements.txt
coursera_llm/NOTEBOOKS/: Lab_2_fine_tune_generative_ai_model.ipynb
fine_tuning/: .gitignore  mistral_ft01.ipynb  mistral_ft02.ipynb
langchain/: agents.ipynb  chains.ipynb  expt_01.ipynb  lcel.ipynb  memory.ipynb
langgraph/: basic_components.py
langgraph/src/: essay_writer.py  graph_test.ipynb  prompt_dictionary.py
rag_variants/: README.md  agents.py  crewai_agents.py  grade_documents.py  grader_prompts.py  graders.py  graph.py  graph_state.py  langgraph_to_excalidraw.py  requirements.txt  tasks.py  tools.py
rag_with_kb/: .gitignore  arxiv_downloader.py  arxiv_papers.py  dynamodb_to_s3.py  extract.py  iam.tf  infra.py  infra.yaml  knowledge_base_updater.py  langchain_memory.py  main.tf  rag_lcel.py  read_params.py  read_yaml.py  search_and_download.py  utility.py  utils.py  variables.tf
rag_with_kb/lambda_functions/: daily_scraper.py  dynamodb_to_s3.py  refresh_knowledge_base.py
rag_with_kb/my_custom_lambda/: arxiv_downloader.py  create_lambda.sh  daily_scraper.py  outputfile.txt  read_yaml.py  requirements.txt
rag_with_kb/scripts/: create_lambda_archive.sh
travel_concierge/: .gitignore  requirements.txt
travel_concierge/src/: main.py  (+3 more)
(+10 files in other folders)
